<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_blue"
   android:padding="16dp"
    >

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent=".2"
    />
<TextView
    android:id="@+id/tv_facebook"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Facebook"
    android:textSize="48sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:gravity="center"
    app:layout_constraintTop_toBottomOf="@+id/guideline1"
    />
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_facebook"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_rect_up"
        android:hint="@string/email_or_phone_number"
        android:textColorHint="@android:color/darker_gray"
        />
    <EditText
      android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        android:background="@drawable/rounded_rect_down"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginTop=".5dp"
        android:padding="12dp"
        />
     <Button
         android:layout_width="match_parent"
         android:layout_height="60dp"
android:layout_marginTop="16dp"
         android:backgroundTint="@color/white_transparent10"
         android:text="@string/log_in"
         android:textAllCaps="false"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@id/edt_password"

         />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".8"
        />
    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        android:text="@string/sign_up_for_facebook"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tv_help_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up"
        android:text="@string/help_center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:gravity="center"
        />
</androidx.constraintlayout.widget.ConstraintLayout>